--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
 
 
 .login-image {
-  /* background-image: url("img_tree.gif"), url("paper.gif"); */
-  background-color: red;
+  background-image: url("../img/computer.jpg");
+  
+   /* url("paper.gif");
+  background-color: red; */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  
 }
